--- a/package.json
+++ b/package.json
@@ -71,7 +71,9 @@
     "webpack-manifest-plugin": "^2.0.3",
     "webpack-notifier": "^1.6.0"
   },
-  "dependencies": {},
+  "dependencies": {
+    "popper": "^1.0.1"
+  },
   "browserslist": [
     "> 1%",
     "last 2 versions"
