--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,5 @@ yarn-error.log
 .phpunit.result.cache
 composer-lock.json
 package-lock.json
+public/build/js/backend.js
+public/build/manifest-backend.json
