--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 /node_modules
 /public/hot
 /public/storage
+/public/dist/
 /storage/*.key
 /vendor
 /.idea
@@ -14,5 +15,8 @@ yarn-error.log
 .phpunit.result.cache
 composer-lock.json
 package-lock.json
-public/build/js/backend.js
-public/build/manifest-backend.json
+/public/build/css/backend.css
+/public/build/js/vendor-backend.js
+/public/build/js/vendor-frontend.js
+/public/build/manifest-frontend.json
+/resources/js/vendor/vue-i18n-locales.generated.js
