--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "webpack-notifier": "^1.6.0"
   },
   "dependencies": {
+    "moment": "^2.22.2",
     "popper": "^1.0.1"
   },
   "browserslist": [
