--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "file-loader": "^2.0.0",
     "flatpickr": "^4.5.0",
     "friendly-errors-webpack-plugin": "^1.7.0",
+    "html2pdf.js": "^0.9.1",
     "intl-tel-input": "^13.0.3",
     "jquery": "^3.3.1",
     "lodash": "^4.17.10",
