--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^5.0.0-beta.3",
     "file-loader": "^2.0.0",
-    "flatpickr": "^4.5.0",
+    "flatpickr": "^4.5.7",
     "friendly-errors-webpack-plugin": "^1.7.0",
     "html2pdf.js": "^0.9.1",
     "intl-tel-input": "^13.0.3",
@@ -79,6 +79,7 @@
     "npm-watch": "^0.6.0",
     "popper": "^1.0.1",
     "rasterizehtml": "^1.3.0",
+    "vue-flatpickr-component": "^8.1.2",
     "vue-gallery": "^1.5.0",
     "vue2-dropzone": "^3.5.2"
   },
