--- a/.gitignore
+++ b/.gitignore
@@ -18,5 +18,7 @@ composer-lock.json
 package-lock.json
 /public/build/manifest-backend.json
 /public/build/js/frontend.js
+public/build/js/frontend.js
 /public/build/js/backend.js
+public/build/js/backend.js
 /resources/js/vendor/vue-i18n-locales.generated.js
