--- a/package.json
+++ b/package.json
@@ -18,11 +18,11 @@
     "@fortawesome/free-solid-svg-icons": "^5.3.1",
     "@fortawesome/vue-fontawesome": "^0.1.1",
     "autoprefixer": "^9.1.3",
-    "axios": "^0.18.0",
+    "axios": "^0.18.1",
     "babel-eslint": "^9.0.0",
     "babel-loader": "^8.0.0",
-    "bootstrap": "^4.1.3",
-    "bootstrap-vue": "^2.0.0-rc.11",
+    "bootstrap": "^4.4.1",
+    "bootstrap-vue": "^2.1.0",
     "cross-env": "^5.2.0",
     "css-loader": "^1.0.0",
     "cssnano": "^4.1.0",
@@ -40,8 +40,8 @@
     "friendly-errors-webpack-plugin": "^1.7.0",
     "html2pdf.js": "^0.9.1",
     "intl-tel-input": "^13.0.3",
-    "jquery": "^3.3.1",
-    "lodash": "^4.17.10",
+    "jquery": "^3.4.1",
+    "lodash": "^4.17.15",
     "mini-css-extract-plugin": "^0.4.2",
     "node-sass": "^4.9.3",
     "noty": "^3.2.0-beta",
@@ -68,7 +68,7 @@
     "webpack": "^4.17.1",
     "webpack-bundle-analyzer": "^2.11.2",
     "webpack-cli": "^3.1.0",
-    "webpack-dev-server": "^3.1.7",
+    "webpack-dev-server": "^3.9.0",
     "webpack-manifest-plugin": "^2.0.3",
     "webpack-notifier": "^1.6.0"
   },
